# dbt_core_snowflake_dagster

./: .gitignore  README.md  dbt_project.yml
dagster_config/: pyproject.toml  setup.py
dagster_config/dagster_config/: definitions.py
models/marts/: table_orders_and_sales_by_market_summary.sql
models/staging/: schema.yml  view_orders_and_sales_per_market.sql
orchestration/: pyproject.toml  setup.py
orchestration/orchestration/: assets.py  project.py  schedules.py
